# xinghuo-image-tool

./: .gitignore  README.md  build.bat  index.html  package-lock.json  package.bat  package.json  vite.config.ts
src/: main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: gateway.rs  lib.rs
src-tauri/web-assets/: character-library.json  main.html  zhihe-storyboard-preview-flashback.html  zhihe-storyboard-preview-flashback.js
src-tauri/web-assets/js/: character.js  core-chat.js  core.js  render-init.js  video-outline.js
