[package]
name = "app"
version = "0.1.0"
description = "星火图片工具 — 文生图 / 图生图 桌面客户端"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
# HTTP client for the OpenAI-compatible image API. default-tls = native-tls:
# uses system OpenSSL on Linux (libssl-dev) and SChannel / Secure Transport on
# Windows / macOS, so no extra crypto deps to cross-compile.
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls", "http2"] }
base64 = "0.22"
# only need timers (sleep) for retry back-off; reqwest already pulls tokio in
tokio = { version = "1", features = ["time"] }
